--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Welcome to the Test Page</h1>
     <p>This is a simple HTML page.</p>
+    <p>This is more content.</p>
 </body>
 </html>
