Add unordered list with items to index.html

--- a/index.html
+++ b/index.html
@@ -9,5 +9,9 @@
     <h1>Welcome to the Test Page</h1>
     <p>This is a simple HTML page.</p>
     <p>This is more content.</p>
+    <ul>
+        <li>* some stuff to do</li>
+        <li>* more stuff to do</li>
+    </ul>
 </body>
 </html>
