Remove asterisks from list items in index.html

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <p>This is a simple HTML page.</p>
     <p>This is more content.</p>
     <ul>
-        <li>* some stuff to do</li>
-        <li>* more stuff to do</li>
+        <li>some stuff to do</li>
+        <li>more stuff to do</li>
     </ul>
 </body>
 </html>
